Major - Added base EngineIDE to EngineSTD (Better name needs to be made)
1) Added EngineIDE based off Scorvi CFIDE (https://github.com/scorvi)
   a) Resource Browser - Urho3D based
   b) Hierarchy - Urho3D based
   c) Asset Hierarchy - EngineStd
   d) Added the ability to resize the window
   e) Added base code for future theme based system
   f) Added base code for IDE settings and Viewport settings
   g) Integerated to the Urho3D/EngineSTD engine (Scenes can be tested real time)
   h) Restructuring to match EngineStd
   j) Hashmap of settings
   k) Added the console and debughd

* Credit goes to Vitej for original code
* Credit goes to itisscan - Andrej Github for better integrating.

To Do
1. EngineStd/GameAsset scene/level export and save
2. GameAsset properties viewer and editor
3. Materials, Particle, and Sound Editor
4. Adding EngineStd components including spawn points
5. Integrate a animation system
6. Settings save, load, and reset
7. Viewport rendering scene ability.

--- a/Source/CMakeLists.txt
+++ b/Source/CMakeLists.txt
@@ -116,12 +116,15 @@ endif ()
 # Urho3D tools
 add_subdirectory (Tools)
 
-
-
 # Build the engine
 if (Build-EngineStd)
   # Add Engine
   add_subdirectory (EngineStd)
+endif()
+
+if (Build-EngineIDE)
+  # Add Engine
+  add_subdirectory (EngineIDE)
 endif()
 
 if (Build-HangarsGame)
@@ -129,7 +132,6 @@ if (Build-HangarsGame)
   add_subdirectory (HangarsClient)
   add_subdirectory (HangarsServer)
 endif()
-
 
 # Urho3D extras
 if (URHO3D_EXTRAS)
